[gd_scene load_steps=14 format=2]

[ext_resource path="res://Audio/Soundtrack/2. SWD_SpeedUp.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Global/Main.gd" type="Script" id=2]
[ext_resource path="res://Audio/Soundtrack/3. SWD_1Up.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scene/Presentation/PoweredByWorlds.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/Soundtrack/7. SWD_Drowning.ogg" type="AudioStream" id=5]
[ext_resource path="res://Entities/Misc/ControllerMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Entities/Misc/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Audio/Soundtrack/5. SWD_Boss.ogg" type="AudioStream" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 2

[sub_resource type="Animation" id=2]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenFader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenFader:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScreenFader:material:blend_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "SetAdd"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenFader:material:blend_mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "SetSub"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenFader:material:blend_mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="SceneLoader" type="Node" parent="."]
pause_mode = 1

[node name="PoweredByWorlds" parent="SceneLoader" instance=ExtResource( 4 )]

[node name="Music" type="Node" parent="."]
pause_mode = 1

[node name="Music" type="AudioStreamPlayer" parent="Music"]
autoplay = true
bus = "Music"

[node name="BossTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 8 )
bus = "Music"

[node name="EffectTheme" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 1 )
bus = "Music"

[node name="Downing" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 5 )
bus = "Music"

[node name="Life" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 3 )
bus = "Music"

[node name="GUI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 128

[node name="ScreenFader" type="ColorRect" parent="GUI"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 0, 0 )

[node name="Fader" type="AnimationPlayer" parent="GUI"]
anims/FadeOut = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/SetAdd = SubResource( 4 )
anims/SetSub = SubResource( 5 )

[node name="ControllerMenu" parent="GUI" instance=ExtResource( 6 )]

[node name="Pause" parent="GUI" instance=ExtResource( 7 )]

[connection signal="finished" from="Music/Life" to="." method="_on_Life_finished"]
